--- a/src/layout/dashboard/components/Header/header-styles.scss
+++ b/src/layout/dashboard/components/Header/header-styles.scss
@@ -19,9 +19,10 @@
 }
 .drawerIcon {
   font-size: 18;
-  padding: 0 24px;
+  // padding: 0 24px;
   cursor: pointer;
   transition: color 0.3s;
 }
 .dropdownItem { font-size: 18px }
-.flagIcon { border-radius: 4px }
+.flagIcon { height: 22px; width: 22px; border-radius: 4px; }
+.avatar {margin-left: 10px;}
