--- a/src/components/dataTable/dataTable-style.scss
+++ b/src/components/dataTable/dataTable-style.scss
@@ -6,3 +6,11 @@
     white-space: nowrap;
   }
 }
+.ant-input:disabled {
+  background-color: #f7f8fa;
+  color: black;
+}
+.ant-input-number-input:disabled {
+  background-color: #f7f8fa;
+  color: black;
+}
