--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -63,6 +63,21 @@
   tr { 
     td {
       padding: 10px 5px;
+      font-size: small;
+    };
+  }
+}
+.ant-table-thead {
+  tr { 
+    th {
+      font-weight: bold !important;
+      border-right: 1px solid #ffffff;
+      font-size: small;
+      background-color: rgb(151, 229, 252) !important;
     }
   }
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
 }
