--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -71,5 +71,8 @@
 }
 
 .ant-switch {
-  background: #1890ff !important;
+  background: #52c41a;
+}
+.ant-switch-checked {
+  background: #1890ff;
 }
