add/edit activity : validation and data modifier

--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -89,3 +89,7 @@
 th.td-top.ant-table-align-center.ant-table-row-cell-break-word {
   vertical-align: middle;
 }
+
+.ant-form-item-label {
+  line-height: 20px;
+}
