add id tab for automation purpose

--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -115,3 +115,11 @@ th.td-top.ant-table-align-center.ant-table-row-cell-break-word {
 .ant-upload-list {
   text-align: left;
 }
+
+#create-own-tab {
+  background-color: none;
+}
+
+#cascade-superior-tab {
+  background-color: none;
+}
