my team dashboard

--- a/src/pages/home/home-styles.scss
+++ b/src/pages/home/home-styles.scss
@@ -26,6 +26,14 @@
     color: #ffffff;  
 }
 
+.ant-list-item:hover {
+    background-color: #f7f7f7;
+    color: #1890ff;
+    align-items: center;
+}
+.ant-list-item-meta-title {
+    color: inherit;
+}
 
 .purple {
     color: #591df1;
