style (table) : smalling table

--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -137,3 +137,12 @@ th.td-top.ant-table-align-center.ant-table-row-cell-break-word {
   -webkit-box-shadow: 0 0 0 2px transparent !important;
   box-shadow: 0 0 0 2px transparent !important;
 }
+#table-alignment {
+  th {
+    font-size: 12px;
+  }
+  td {
+    font-size: 12px;
+  }
+
+}
