[AU] adding content for final KPI rating

--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -144,5 +144,7 @@ th.td-top.ant-table-align-center.ant-table-row-cell-break-word {
   td {
     font-size: 12px;
   }
-
+}
+.mt-0 {
+  margin-top: 0 !important;
 }
