--- a/src/pages/home/home-styles.scss
+++ b/src/pages/home/home-styles.scss
@@ -1,115 +1,107 @@
-@media(min: 1281px){
-    .grid {
-        border-right: 0.07rem solid #ebedf2;
-        text-align: center;
-    }
+@media screen and (max-width: 961px),
+  screen and (max-width: 641px),
+  screen and (max-width: 481px),
+  screen and (max-width: 320px) {
+  .grid {
+    border-bottom: 0.07rem solid #ebedf2;
+    text-align: center;
+    padding-bottom: 20%;
+  }
 }
-@media(min: 1025px){
-    .grid {
-        border-right: 0.07rem solid #ebedf2;
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 961px), screen and (max-width: 641px), screen and (max-width: 481px), screen and (max-width: 320px) {
-    .grid {
-        border-bottom: 0.07rem solid #ebedf2;
-        text-align: center;
-        padding-bottom: 20%;
-    }
-}
-
 
 .homeBtn {
-    padding-left: 2.25rem;
-    padding-right: 2.25rem;
-    color: #ffffff;  
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+  color: #ffffff;
 }
 
 .ant-list-item:hover {
-    background-color: #f7f7f7;
-    color: #1890ff;
-    align-items: center;
+  background-color: #f7f7f7;
+  color: #1890ff;
+  align-items: center;
 }
 .ant-list-item-meta-title {
-    color: inherit;
+  color: inherit;
 }
 
 .purple {
-    color: #591df1;
-    filter: invert(8%) sepia(75%) saturate(7311%) hue-rotate(260deg) brightness(140%) contrast(97%);
+  color: #591df1;
+  filter: invert(8%) sepia(75%) saturate(7311%) hue-rotate(260deg)
+    brightness(140%) contrast(97%);
 }
-.pink{
-    color: #fd27eb;
-    filter: invert(32%) sepia(40%) saturate(7022%) hue-rotate(289deg) brightness(105%) contrast(108%);
+.pink {
+  color: #fd27eb;
+  filter: invert(32%) sepia(40%) saturate(7022%) hue-rotate(289deg)
+    brightness(105%) contrast(108%);
 }
-.yellow{
-    color: #ffb822;
-    filter: invert(78%) sepia(47%) saturate(897%) hue-rotate(338deg) brightness(101%) contrast(101%);
+.yellow {
+  color: #ffb822;
+  filter: invert(78%) sepia(47%) saturate(897%) hue-rotate(338deg)
+    brightness(101%) contrast(101%);
 }
-.green{
-    color: #1dc9b7;
-    filter: invert(70%) sepia(20%) saturate(1609%) hue-rotate(123deg) brightness(92%) contrast(86%);
-
-}
-
-.purpleBtn{
-    background-color: #591df1;
-    border-color: #591df1;
+.green {
+  color: #1dc9b7;
+  filter: invert(70%) sepia(20%) saturate(1609%) hue-rotate(123deg)
+    brightness(92%) contrast(86%);
 }
 
-.pinkBtn{
-    background-color: #fd27eb;
-    border-color: #fd27eb;
+.purpleBtn {
+  background-color: #591df1;
+  border-color: #591df1;
 }
 
-.yellowBtn{
-    background-color: #ffb822;
-    border-color: #ffb822;
+.pinkBtn {
+  background-color: #fd27eb;
+  border-color: #fd27eb;
+}
+
+.yellowBtn {
+  background-color: #ffb822;
+  border-color: #ffb822;
 }
 .greenBtn {
-    background-color: #1dc9b7;
-    border-color: #1dc9b7;
+  background-color: #1dc9b7;
+  border-color: #1dc9b7;
 }
 
 h1 {
-    font-size: 2.14rem;
-    margin-bottom: 0.571rem;
-    margin-top: 100px;
-    color: #595d6e;
+  font-size: 2.14rem;
+  margin-bottom: 0.571rem;
+  margin-top: 100px;
+  color: #595d6e;
 }
-.qoute-text{
-    font-size: 1.1rem;
-    color: #a2a5b9;
-    font-weight: 500
+.qoute-text {
+  font-size: 1.1rem;
+  color: #a2a5b9;
+  font-weight: 500;
 }
 
-
-// hex 
+// hex
 .hex:before {
-    content: " ";
-    width: 0; height: 0;
-    border-bottom: 30px solid #6C6;
-    border-left: 52px solid transparent;
-    border-right: 52px solid transparent;
-    position: absolute;
-    top: -30px;
+  content: " ";
+  width: 0;
+  height: 0;
+  border-bottom: 30px solid #6c6;
+  border-left: 52px solid transparent;
+  border-right: 52px solid transparent;
+  position: absolute;
+  top: -30px;
 }
 
 .hex {
-    margin-top: 30px;
-    width: 104px;
-    height: 60px;
-    background-color: #6C6;
-    position: relative;
+  margin-top: 30px;
+  width: 104px;
+  height: 60px;
+  background-color: #6c6;
+  position: relative;
 }
 
 .hex:after {
-    content: "";
-    width: 0;
-    position: absolute;
-    bottom: -30px;
-    border-top: 30px solid #6C6;
-    border-left: 52px solid transparent;
-    border-right: 52px solid transparent;
+  content: "";
+  width: 0;
+  position: absolute;
+  bottom: -30px;
+  border-top: 30px solid #6c6;
+  border-left: 52px solid transparent;
+  border-right: 52px solid transparent;
 }
